namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-person-communication-needs-api-preprod/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-person-communication-needs-api-preprod
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "preprod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "connect-dps"
    cloud-platform.justice.gov.uk/slack-alert-channel: "connect-dps-non-prod-alerts"
    cloud-platform.justice.gov.uk/application: "hmpps-person-communication-needs-api"
    cloud-platform.justice.gov.uk/owner: "Digital Prison Services: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-person-communication-needs-api"
    cloud-platform.justice.gov.uk/team-name: "connect-dps"
